[package]
name = "rpc"
version = "0.1.0"
edition = "2024"
authors = ["techs-sus"]
license = "Unlicense"
readme = "README.md"

[lib]
name = "rpc"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
arc-swap = "1.7.1"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = "0.4.41"
color-eyre = "0.6.5"
loole = "0.4.1"
papaya = "0.2.3"
regex = "1.11.2"
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
